--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "respository": {
-    "url": ""
+    "url": "https://github.com/herquiloidehele/element-scroll-position"
   },
   "scripts": {
     "build": "tsup"
