--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
-  "respository": {
+  "repository": {
     "url": "https://github.com/herquiloidehele/element-scroll-position"
   },
   "scripts": {
